duicontrolpanel (0.12.4~unreleased) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#234151 - White screen is shown on startup
  * Removes linking to unnecessery libraries
  * Fixes: NB#235605 - Reset settings should have buttons centered
  * Fixes: NB#235602 - Extra step to Sound settings needs to be removed
  * Fixes: NB#235762 - overriding back() in DcpWidget does not help

  [ Sandor Pinter ]
  * Fixes: NB#234383 - duicontrolpanel startup triggers gconf update
    that results in 402 bytes written to flash

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 11 Mar 2011 16:39:01 +0100

duicontrolpanel (0.12.3) unstable; urgency=low

  * Fixes: NB#234416 - Controlpanel provides no way to force running an applet
    brief inprocess

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Mar 2011 16:49:51 +0100

duicontrolpanel (0.12.2) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixing iconIds
  * Adding Applications/Installations, and Applications/Manage applications categories

  [ Robert Manner ]
  * Fixes: NB#225161 - Incorrect title on dialog when Settings does not
    respond anymore
  * Fixes: NB#228255 - When reopening the settings application from
    launcher, the previous subview is shown
  * Fixes: NB#220633 - T-coil hearing aid is mentioned in settings main
    menu
  * Fixes: NB#223592 - COREWEB: /usr/bin/duicontrolpanel
    'qt_call_post_routines QApplication::~QApplication
    MApplication::~MApplication cleanup'

 -- Robert Manner <robert.manner@blumsoft.eu>  Mon, 07 Mar 2011 12:04:04 +0100

duicontrolpanel (0.12.1) unstable; urgency=low

  * New: static (localized) value line (second line) can be specified for the
    applet icon from .desktop file
  * Fixes: translation id appears on category button instead of engineering
    translation in case there is no translation available (ex: meego)

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 02 Mar 2011 14:32:44 +0100

duicontrolpanel (0.12.0) unstable; urgency=low
